<resources>
    <string name="app_name">FoodBank</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin">admin_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_back_admin">Welcome back Admin</string>
    <string name="remove">Remove</string>
    <string name="current_food_at_this_bank">Current Food at this Bank:</string>
    <string name="foodBank_name">FoodBank Name</string>
    <string name="last_time_update">Last Time Update</string>
    <string name="contact_number">Contact Number</string>
    <string name="title_activity_register">registerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="new_food_bank">New Food Bank</string>

    //string used for spinner
    <string-array name="array_foodBanks">
        <item>AAA Food Bank</item>
        <item>BBB Food Bank</item>
        <item>CCC Food Bank</item>
        <item>DDD Food Bank</item>
        <item>EEE Food Bank</item>
        <item>FFF Food Bank</item>
        <item>GGG Food Bank</item>
        <item>HHH Food Bank</item>
    </string-array>


    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>