<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@android:dimen/app_icon_size">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:src="@drawable/logo" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="182dp" />

            <TextView
                android:id="@+id/tvFoodBankName"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:gravity="center"
                android:text="@string/foodBank_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="left|center_vertical"
                android:text="@string/contact_number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:text="@string/last_time_update" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/current_food_at_this_bank" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFoodList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/food_item" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

        </LinearLayout>

    </FrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>
</layout>